Use newest qgis_plugin_tools, fix workflows and add issue templates

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -7,9 +7,11 @@ on:
   push:
     branches:
       - master
+      - main
   pull_request:
     branches:
       - master
+      - main
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -24,12 +26,12 @@ jobs:
         with:
           submodules: true
 
-      - name: Pull qgis 3.14 image
-        run: docker pull qgis/qgis:release-3_14
+      - name: Pull qgis 3.16 image
+        run: docker pull qgis/qgis:release-3_16
 
       # Runs all tests
-      - name: Run tests (3.14)
-        run: docker run --rm --net=host --volume `pwd`:/app -w=/app -e QGIS_PLUGIN_IN_CI=1 qgis/qgis:release-3_14 sh -c "pip3 install -q pytest pytest-cov && xvfb-run -s '+extension GLX -screen 0 1024x768x24' pytest -v --cov --cov-report=xml"
+      - name: Run tests (3.16)
+        run: docker run --rm --net=host --volume `pwd`:/app -w=/app -e QGIS_PLUGIN_IN_CI=1 qgis/qgis:release-3_16 sh -c "pip3 install -q pytest pytest-cov && xvfb-run -s '+extension GLX -screen 0 1024x768x24' pytest -v --cov --cov-report=xml"
 
       # Upload coverage report
       - name: Upload coverage to Codecov
