--- a/.github/workflows/tests_ltr.yml
+++ b/.github/workflows/tests_ltr.yml
@@ -7,9 +7,11 @@ on:
   push:
     branches:
       - master
+      - main
   pull_request:
     branches:
       - master
+      - main
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
