--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "Foursquare/qgis_plugin_tools"]
-	path = Foursquare/qgis_plugin_tools
+[submodule "kepler.gl/qgis_plugin_tools"]
+	path = kepler.gl/qgis_plugin_tools
 	url = https://github.com/GispoCoding/qgis_plugin_tools.git
