--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "kepler.gl/qgis_plugin_tools"]
 	path = kepler.gl/qgis_plugin_tools
-	url = https://github.com/GispoCoding/qgis_plugin_tools.git
+	url = git@github.com:GispoCoding/qgis_plugin_tools.git
