--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -34,7 +34,7 @@ jobs:
         run: >
           docker run --rm --net=host --volume `pwd`:/app -w=/app -e QGIS_PLUGIN_IN_CI=1 qgis/qgis:${{ matrix.docker_tags }} sh -c
           "pip3 install -q pytest pytest-cov && xvfb-run -s '+extension GLX -screen 0 1024x768x24'
-          pytest -v --cov=Unfolded --cov-report=xml"
+          pytest -v -k 'not fetch' --cov=Unfolded --cov-report=xml"
       # Upload coverage report. Will not work if the repo is private
       - name: Upload coverage to Codecov
         if: ${{ matrix.docker_tags == 'latest' && !github.event.repository.private }}
