--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,6 +22,12 @@ jobs:
       #    - name: Install Qt lrelease
       #      run: sudo apt-get install qt5-default qttools5-dev-tools
 
+      # sets up an "environment" tag that will be read and used by Sentry when
+      # reporting errors (see sentry.py for more details)
+      - name: Set Sentry environment
+        run: |
+          echo "production" > Unfolded/sentry_env
+
       - name: Install qgis-plugin-ci
         run: pip3 install qgis-plugin-ci
 
