--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,11 +22,10 @@ jobs:
       #    - name: Install Qt lrelease
       #      run: sudo apt-get install qt5-default qttools5-dev-tools
 
-      # sets up an "environment" tag that will be read and used by Sentry when
-      # reporting errors (see sentry.py for more details)
-      - name: Set Sentry environment
+      # sets up an "environment" tag for Sentry
+      - name: Set up a Sentry environment
         run: |
-          echo "production" > Unfolded/sentry_env
+          sed -i '' "s/PLUGIN_ENVIRONMENT='local'/PLUGIN_ENVIRONMENT='production'/" Unfolded/sentry.py
 
       - name: Install qgis-plugin-ci
         run: pip3 install qgis-plugin-ci
