--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,6 +22,11 @@ jobs:
       #    - name: Install Qt lrelease
       #      run: sudo apt-get install qt5-default qttools5-dev-tools
 
+      # sets up an "environment" tag for Sentry
+      - name: Set up a Sentry environment
+        run: |
+          sed -i "s/PLUGIN_ENVIRONMENT='local'/PLUGIN_ENVIRONMENT='production'/" Unfolded/sentry.py
+
       - name: Install qgis-plugin-ci
         run: pip3 install qgis-plugin-ci
 
