--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -30,7 +30,7 @@ jobs:
         run: docker pull qgis/qgis:${{ matrix.docker_tags }}
 
       - name: Clean pycache
-        run: find . -name /*.pyc -delete
+        run: find . -name \*.pyc -delete
 
       # Runs all tests
       - name: Run tests
